--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'variables';
+@import 'colors';
+
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: $font-size;
+  font-weight: 300;
+  line-height: $line-height;
+  margin: 0;
+  padding: 0;
+  background: $light-grey;
+}
