a weather forecast a weather conditions separated into component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
 <!--  <header></header>-->
   <router-outlet></router-outlet>
+  <router-outlet name="forecastInfo"></router-outlet>
 <!--  <footer></footer>-->
 </div>
