--- a/src/app/dashboard/city-card/city-card.component.scss
+++ b/src/app/dashboard/city-card/city-card.component.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import 'mobile';
 
 .card {
   &__wrapper {
@@ -6,8 +7,6 @@
     width: 200px;
     height: 300px;
     border-radius: 6px;
-    //background: $white;
-    //background: url("/assets/images/pexels-photo-1885810.jpeg") no-repeat center;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -17,9 +16,18 @@
     transition: all .2s;
     cursor: pointer;
 
-    &:hover {
+    &:hover,
+    &--active {
       box-shadow: 8px 8px 4px 0 rgb(27 27 27 / 30%);
       transform: translateY(-2px);
+    }
+
+    &:focus {
+      outline: none;
+    }
+
+    @include mobile() {
+      height: 150px;
     }
   }
 
@@ -32,33 +40,5 @@
     background-color: rgb($white, 0.2);
     border-radius: 6px;
     font-size: 20px;
-
-    &__title {
-      font-size: 18px;
-    }
-
-    &__row {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    &__icon {
-      width: 28px;
-      margin-left: 6px;
-    }
-
-    &__wind {
-      display: flex;
-      align-items: center;
-
-      &__unit {
-        font-size: 12px;
-      }
-    }
-
-    &__weather-conditions {
-
-    }
   }
 }
