--- a/src/app/forecast/city-forecast/city-forecast.component.html
+++ b/src/app/forecast/city-forecast/city-forecast.component.html
@@ -3,10 +3,12 @@
   <div *ngFor="let conditions of (hourlyForecast$ | async)"
        class="forecast__entity">
     <wa-weather-conditions
-      [info]="getInfo(conditions.dt)"
-      [weatherIcon]="conditions.weather[0].icon"
-      [temperature]="conditions.temp"
-      [wind]="conditions.wind_speed"
+      [conditions]="{
+        info: getInfo(conditions.dt),
+        weatherIcon: conditions.weather[0].icon,
+        temperature: conditions.temp,
+        wind: conditions.wind_speed
+      }"
     ></wa-weather-conditions>
   </div>
 </div>
