selected card design update weather conditions wind parameter update

--- a/src/app/shared/weather-conditions/weather-conditions.component.html
+++ b/src/app/shared/weather-conditions/weather-conditions.component.html
@@ -8,6 +8,6 @@
 <section>
   <div class="weather-conditions__temperature">{{ conditions.temperature | temperature }}</div>
   <div class="weather-conditions__wind">
-    {{ conditions.wind.toFixed(2) }}&nbsp;<span class="weather-conditions__wind__unit"><sup>m</sup>&frasl;<sub>s</sub></span>
+    {{ windSpeed }}&nbsp;<span class="weather-conditions__wind__unit"><sup>m</sup>&frasl;<sub>s</sub></span>
   </div>
 </section>
