--- a/src/app/dashboard/city-card/city-card.component.scss
+++ b/src/app/dashboard/city-card/city-card.component.scss
@@ -19,7 +19,20 @@
     &:hover,
     &--active {
       box-shadow: 8px 8px 4px 0 rgb(27 27 27 / 30%);
-      transform: translateY(-2px);
+      transform: translateY(-4px);
+    }
+
+    &--active:after {
+      content: '';
+      position: absolute;
+      bottom: -20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 0;
+      height: 0;
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+      border-top: 20px solid #000;
     }
 
     &:focus {
